--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     <div id="container"></div>
+    <p style="text-align: right"><a href="https://github.com/mrclay/swc-leaflet-playground">source</a></p>
   </body>
 </html>
